rf68000 - Femtiki update
- porting code

--- a/software/Femtiki/source/makefile
+++ b/software/Femtiki/source/makefile
@@ -20,9 +20,13 @@ LLX = vlink
 
 
 ASMS = \
+	kernel\tcb.asm \
+	kernel\msg.asm \
 	femtiki.asm
 
 OUT = \
+	kernel\tcb.o \
+	kernel\msg.o \
 	femtiki.o
 
 all:	$(OUT)
