rf68000 - Femtiki update
- launchpad for timer ISR
- OS call dispatcher in asm

--- a/software/Femtiki/source/makefile
+++ b/software/Femtiki/source/makefile
@@ -20,13 +20,17 @@ LLX = vlink
 
 
 ASMS = \
+	memmgnt3.asm \
 	kernel\tcb.asm \
 	kernel\msg.asm \
+	kernel\femtiki.asm \
 	femtiki.asm
 
 OUT = \
+	memmgnt3.o \
 	kernel\tcb.o \
 	kernel\msg.o \
+	kernel\femtiki.o \
 	femtiki.o
 
 all:	$(OUT)
