rf68000 - software update

--- a/software/Femtiki/source/makefile
+++ b/software/Femtiki/source/makefile
@@ -3,10 +3,12 @@
 PATH1 = "C:/Users/Robert/OneDrive/documents/Cores2025/rf68000/software/"
 PATH2 = "C:\Users\Robert\OneDrive\documents\Cores2025\rf68000\software\c_standard_lib-master\assert\"
 PATH = $PATH;$(PATH1)"Femtiki/source/";$(PATH1)"Femtiki/source/kernel/";"F:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Tools\MSVC\14.29.30133\bin\Hostx64\x64"
-INC1 = "C:/Users/Robert/OneDrive/documents/Cores2025/rf68000/software/c_standard_lib-master/_HEADERS/"
+INC1 = "C:/Users/Robert/OneDrive/documents/Cores2025/rf68000/software/c_standard_lib-master/_Femtiki/"
 FEMTIKI_INC = "C:/Users/Robert/OneDrive/documents/Cores2025/rf68000/software/Femtiki/source/inc/"
-INC = $(INC1);$(FEMTIKI_INC)
-INCLUDE = $(INC1);$(FEMTIKI_INC)
+INC = $(INC1)
+#;$(FEMTIKI_INC)
+INCLUDE = $(INC1)	
+#;$(FEMTIKI_INC)
 #CCX = cc64
 #CFLAGS = -w -S -fno-exceptions
 #CCX = cc64
@@ -22,6 +24,7 @@ LLX = vlink
 ASMS = \
 	femtiki_vars.x68 \
 	lib.x68 \
+	putnum.asm \
 	mem_support.x68 \
 	memmgnt3.asm \
 	kernel\tcb.asm \
@@ -32,6 +35,7 @@ ASMS = \
 OUT = \
 	femtiki_vars.o \
 	lib.o \
+	putnum.o \
 	mem_support.o \
 	memmgnt3.o \
 	kernel\tcb.o \
@@ -49,9 +53,13 @@ LIB:
 	$(AAX) $(AFLAGS) kernel\Femtiki_vars.x68 -L Femtiki_vars.lst -o Femtiki_vars.o
 	$(AAX) $(AFLAGS) mem_support.x68 -L mem_support.lst -o mem_support.o
 	$(AAX) $(AFLAGS) _lmath.s -L _lmath.lst -o _lmath.o
-	$(AAX) $(AFLAGS) lib.x68 -L lib.lst -o lib.o
+	del crt.o
+	del lib.o
+	copy ..\..\crt\source\lib.o lib.o
+	copy ..\..\crt\source\crt.o crt.o
 	$(AAX) $(AFLAGS) Femtiki.asm -L Femtiki.lst -o Femtiki.o
-	$(LLX) -T Femtiki.cmd -bsrec37 Femtiki_vars.o _lmath.o lib.o mem_support.o Femtiki.o -o Femtiki.s37
+	$(LLX) -T Femtiki.cmd -bsrec37 Femtiki_vars.o errno.o ctype.o localeco.o \
+		signal.o stdlib.o stdio.o string.o _lmath.o crt.o lib.o mem_support.o Femtiki.o -o Femtiki.s37
 
          
 FEMTIKI:	$(OUT)
